# whirligig

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
demo/: demo.tape  test.txt
scripts/: release.sh
src/whirligig/: __init__.py  __main__.py  cli.py  spinner.py
tests/: test_cli.py  test_spin.py
